src/components/layout/content/_content.scss
@import '@/scss/abstracts';
@import '@/scss/base';

.site-content {
    flex-grow: 1;
    overflow-y: auto;
    display: flex;
    flex-direction: column;

    .content-container {
        flex: 1;
    }
}

.floating-icon-container {
    position: fixed;
    right: 3.125rem;
    bottom: 3.125rem;
    box-shadow: 0 0 0.375rem $shadow;
    border-radius: 9999rem;
    background-color: $white;
    max-height: 4.375rem;
    overflow: hidden;
    display: flex;
    flex-direction: column-reverse;
    transition: max-height 0.2s ease-out;

    &.mod__display {
        max-height: 13.125rem;
    }

    .floating-icon-btn {
        height: 100%;
        width: 100%;
        display: flex;
        justify-content: center;
        align-items: center;
        height: 4.375rem;
        width: 4.375rem;
        background-color: $white;

        &:hover {
            background-color: $gray-300;
        }

        .floating-icon {
            display: flex;
            flex-direction: column;
            justify-content: center;
            align-items: center;

            img {
                width: 2.625rem;
                aspect-ratio: 1/1;
                object-fit: cover;
            }

            p {
                font-family: $font-secondary;
                font-size: 0.75rem;
                line-height: 0.9375rem;
                letter-spacing: 0.0375rem;
                color: $blueish-green;
            }
        }
    }

    .before-content {
        position: relative;

        .before-content-decorator {
            opacity: 0;
            position: absolute;
            top: 0;
            width: 3.125rem;
            height: 0.0625rem;
            background-color: #99CDD1;
            left: calc(100% / 2 - 1.5625rem);
        }

        &.mod__display {
            .before-content-decorator {
                transition: opacity 0s 0.4s ease;
                opacity: 1;
            }
        }
    }

    .after-content {
        opacity: 0;
        pointer-events: none;
        max-height: 0;
        transition: max-height 0.2s ease-out;

        &.mod__display {
            opacity: 1;
            transition: max-height 0.4s ease-out;
            pointer-events: all;
            max-height: 8.75rem;
        }
    }
}

.overlay-wrapper {
    width: 31.25rem;
    position: relative;

    .floating-icon-overlay {
        display: flex;
        flex-direction: column;
        position: relative;

        .floating-icon-image-container {
            height: 18.75rem;
            width: 100%;
            position: relative;

            &.image-only {
                height: auto;
            }

            .floating-icon-image-button{
                &.disabled {
                    cursor: auto;
                }
                
                .floating-icon-image {
                    height: 100%;
                    width: 100%;
                    object-fit: cover;
                    position: relative;
                }
            }
        }

        .floating-icon-content-container {
            padding: 1.875rem 2.5rem;
            display: flex;
            flex-direction: column;
            align-items: flex-start;

            .floating-icon-content-header {
                font-size: 1.5rem;
                font-weight: 700;
                font-family: $font-secondary;
                letter-spacing: 0.15rem;
                color: $dark-300;
                margin-bottom: 1.5rem;
            }

            .floating-icon-content-desc {
                font-size: 1rem;
                line-height: 1.5rem;
                letter-spacing: 0.1rem;
                font-weight: 400;
                color: $dark-300;
                margin-bottom: 2.5rem;
            }

            .floating-icon-content-not-show-again {
                font-size: 1rem;
                line-height: 1.625rem;
                letter-spacing: 0.05rem;
                font-style: oblique;
                color: $gray-600;
                text-decoration: underline;
            }
        }
    }
}

.overlay {
    position: absolute;
    height: 100%;
    width: 100%;
    visibility: hidden;
    display: flex;
    justify-content: center;
    align-items: center;
    opacity: 0;
    
    &.mod__active {
        visibility: visible;
        opacity: 1;
        transition: all 0.5s ease;
    }

    &.mod__blur {
        backdrop-filter: blur(0.1875rem);
        -webkit-backdrop-filter: blur(0.1875rem);
    }

    .overlay-background {
        position: absolute;
        height: 100%;
        width: 100%;
        background: $transparent;

        &.mod__blur {
            background: $dark-300 0% 0% no-repeat padding-box;
            opacity: 0.4;
        }
    }

    .imi-card-component {
        height: auto;
        position: relative;
    }
}

